--- a/gke-front-deployment.yml
+++ b/gke-front-deployment.yml
@@ -1,34 +1,34 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: hackathon-ui
+  name: hackathon-ui-2
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: hackathon-ui-user
-  namespace: hackathon-ui
+  name: hackathon-ui-user-2
+  namespace: hackathon-ui-2
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hackathon-ui-deployment
-  namespace: hackathon-ui
+  name: hackathon-ui-deployment-2
+  namespace: hackathon-ui-2
   labels:
-    app: hackathon-ui
+    app: hackathon-ui-2
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: hackathon-ui
+      app: hackathon-ui-2
   template:
     metadata:
       labels:
-        app: hackathon-ui
+        app: hackathon-ui-2
     spec:
-      serviceAccountName: hackathon-ui-user
+      serviceAccountName: hackathon-ui-user-2
       containers:
-        - name: hackathon-ui
+        - name: hackathon-ui-2
           image: cagip/hackathon-ui:latest
           imagePullPolicy: Always
           env:
@@ -55,12 +55,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: hackathon-ui-svc
-  namespace: hackathon-ui
+  name: hackathon-ui-svc-2
+  namespace: hackathon-ui-2
   annotations:
     cloud.google.com/neg: '{"ingress": true}'
   labels:
-    app: hackathon-ui
+    app: hackathon-ui-2
 spec:
   type: LoadBalancer
   ports:
@@ -69,4 +69,4 @@ spec:
       protocol: TCP
       targetPort: 80
   selector:
-    app: hackathon-ui
+    app: hackathon-ui-2
