--- a/gke-front-deployment.yml
+++ b/gke-front-deployment.yml
@@ -1,35 +1,35 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: hackathon-ui
+  name: hackathon-ui2
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: hackathon-ui-user
-  namespace: hackathon-ui
+  name: hackathon-ui2-user
+  namespace: hackathon-ui2
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hackathon-ui-deployment
-  namespace: hackathon-ui
+  name: hackathon-ui2-deployment
+  namespace: hackathon-ui2
   labels:
-    app: hackathon-ui
+    app: hackathon-ui2
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: hackathon-ui
+      app: hackathon-ui2
   template:
     metadata:
       labels:
-        app: hackathon-ui
+        app: hackathon-ui2
     spec:
-      serviceAccountName: hackathon-ui-user
+      serviceAccountName: hackathon-ui2-user
       containers:
-        - name: hackathon-ui
-          image: cagip/hackathon-ui:latest
+        - name: hackathon-ui2
+          image: cagip/hackathon-ui2:latest
           imagePullPolicy: Always
           env:
             - name: VUE_APP_API_ENDPOINT
@@ -55,12 +55,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: hackathon-ui-svc
-  namespace: hackathon-ui
+  name: hackathon-ui2-svc
+  namespace: hackathon-ui2
   annotations:
     cloud.google.com/neg: '{"ingress": true}'
   labels:
-    app: hackathon-ui
+    app: hackathon-ui2
 spec:
   type: LoadBalancer
   ports:
@@ -69,4 +69,4 @@ spec:
       protocol: TCP
       targetPort: 80
   selector:
-    app: hackathon-ui
+    app: hackathon-ui2
