--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,34 +1,34 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: hackathon-api
+  name: hackathon-api2
 ---
 # apiVersion: v1
 # kind: ServiceAccount
 # metadata:
-#   name: hackathon-api-user
-#   namespace: hackathon-api
+#   name: hackathon-api2-user
+#   namespace: hackathon-api2
 # ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hackathon-api-deployment
-  namespace: hackathon-api
+  name: hackathon-api2-deployment
+  namespace: hackathon-api2
   labels:
-    app: hackathon-api
+    app: hackathon-api2
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: hackathon-api
+      app: hackathon-api2
   template:
     metadata:
       labels:
-        app: hackathon-api
+        app: hackathon-api2
     spec:
-      serviceAccountName: hackathon-api-user
+      serviceAccountName: hackathon-api2-user
       containers:
-        - name: hackathon-api
+        - name: hackathon-api2
           image: cagip/hackathon-api:latest
           imagePullPolicy: Always
           env:
@@ -57,12 +57,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: hackathon-api-svc
-  namespace: hackathon-api
+  name: hackathon-api2-svc
+  namespace: hackathon-api2
   annotations:
     cloud.google.com/neg: '{"ingress": true}'
   labels:
-    app: hackathon-api
+    app: hackathon-api2
   spec:
   type: LoadBalancer
   ports:
@@ -71,4 +71,4 @@ metadata:
       protocol: TCP
       targetPort: 80
   selector:
-    app: hackathon-api
+    app: hackathon-api2
